--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <style>
 
     </style>
+    <script src="ClientPush.js"></script>
     <script>
-        // Request permission from user
-        Notification.requestPermission();
+        // // Request permission from user
+        // Notification.requestPermission();
 
-        // Check the status of the notification
-        console.log(Notification.permission);
+        // // Check the status of the notification
+        // console.log(Notification.permission);
 
-        var e = new Notification("Notification from Avetti", {
-            body: "Avetti Commerce",
-            icon: "https://image.flaticon.com/icons/png/512/3/3513.png",
-            tag: "TEST-NOTIFICATION"
-        });
+        // var e = new Notification("Notification from Avetti", {
+        //     body: "Avetti Commerce",
+        //     icon: "https://image.flaticon.com/icons/png/512/3/3513.png",
+        //     tag: "TEST-NOTIFICATION"
+        // });
 
-        e.onclick = function() {
-            window.open('http://www.avetticommerce.com/', '_blank');
-        }
+        // e.onclick = function() {
+        //     window.open('http://www.avetticommerce.com/', '_blank');
+        // }
 
-        e.onshow = function() {
-            console.log("Notification opened");
-        }
+        // e.onshow = function() {
+        //     console.log("Notification opened");
+        // }
 
-        e.onclose = function() {
-            console.log("Notification closed");
-        }
+        // e.onclose = function() {
+        //     console.log("Notification closed");
+        // }
     </script>
 </head>
 
